--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "mobx": "^4.1.1",
     "mobx-react": "^5.0.0",
     "react": "^16.3.0",
